k8s/echo-gateway/2-debug-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: echo-http-client
  namespace: echo-gateway
spec:
  serviceAccountName: echo-gateway
  containers:
  - image: ko://github.com/jlevesy/spire-testbed/cmd/httpclient
    imagePullPolicy: Always
    name: echo-gateway
    command:
      - sleep
    args:
      - infinity
    volumeMounts:
      - name: spire-agent-socket
        mountPath: /run/spire/sockets
        readOnly: true
  volumes:
    - name: spire-agent-socket
      hostPath:
        path: /run/spire/sockets
        type: DirectoryOrCreate
