k8s/echo-gateway/1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echo-gateway
  namespace: echo-gateway
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: echo-gateway-echo-gateway@kubernetescrd
spec:
  ports:
  - port: 8443
    name: https
    protocol: TCP
    targetPort: https
  selector:
    app: echo-gateway
