k8s/echo-gateway/1-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-gateway
  namespace: echo-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: echo-gateway.localhost
    http:
      paths:
      - backend:
          service:
            name: echo-gateway
            port:
              name: https
        path: /echo
        pathType: Prefix
